--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  carousel_slider: ^4.2.1
+  hexcolor: ^3.0.1
+  curved_navigation_bar: ^1.0.3
+  fluid_bottom_nav_bar: ^1.4.0   
+  percent_indicator: ^4.2.3
+  go_router: ^13.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -57,7 +62,27 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+      - family: AkayaKanadaka
+        fonts:
+        - asset: res/fonts/AkayaKanadaka-Regular.ttf
+      - family: AlfaSlabOne
+        fonts:
+        - asset: res/fonts/AlfaSlabOne-Regular.ttf
+      - family: SourceSans3
+        fonts:
+        - asset: res/fonts/SourceSans3-Black.ttf
+          weight: 900
+        - asset: res/fonts/SourceSans3-Bold.ttf
+          weight: 700
+        - asset: res/fonts/SourceSans3-SemiBold.ttf
+          weight: 600
+        - asset: res/fonts/SourceSans3-Regular.ttf
+          weight: 400
+      - family: Lato
+        fonts:
+        - asset: res/fonts/Lato-Regular.ttf
+          weight: 400
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -88,3 +113,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+   - res/images/
