--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,17 @@ dependencies:
   go_router: ^14.0.1
   simple_animations: ^5.0.2
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   lottie: ^3.1.0
+  velocity_x: ^4.1.2
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  jwt_decoder: ^2.0.1
+  flutter_slidable: ^3.1.0
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
