--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   lottie: ^3.1.0
-
+  fluttertoast: ^8.2.5
   http: ^1.2.1
   shared_preferences: ^2.2.3
   jwt_decoder: ^2.0.1
   flutter_slidable: ^3.1.0
   dio: ^5.4.3+1
   flutter_dotenv: ^5.1.0
+  awesome_snackbar_content: ^0.1.1
 
 dev_dependencies:
   flutter_test:
