--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dio: ^5.4.3+1
   flutter_dotenv: ^5.1.0
   awesome_snackbar_content: ^0.1.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
