--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   simple_animations: ^5.0.2
   intl: ^0.19.0
   fl_chart: ^0.67.0
+  flutter_bloc: ^8.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
