--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   intl: ^0.19.0
   fl_chart: ^0.68.0
   flutter_bloc: ^8.1.6
-
+  flutter_local_notifications: ^9.5.3
+  timezone: ^0.8.0
+  android_alarm_manager_plus: ^4.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
